After having too much trouble finally i completed the project. Now my next target is to fufil the optional part

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .sora-font{
     font-family: "Sora", sans-serif;
 }
+.active{
+    background-color: #E7FE29;
+    font-weight: 700;
+    color: black;
+    
+}
